setAllowedOrigins